--- a/templates/lotrrp-living-standard.hbs
+++ b/templates/lotrrp-living-standard.hbs
@@ -1,1 +1,1 @@
-<input type="text" name="flags.aime.details.livingStandard" value="{{flags.aime.details.livingStandard}}" placeholder="{{ localize 'AIME.LivingStandard' }}"/>
+<input type="text" name="flags.lotrrp.details.livingStandard" value="{{flags.lotrrp.details.livingStandard}}" placeholder="{{ localize 'LOTRRP.LivingStandard' }}"/>
