--- a/templates/lotrrp-miserable-box.hbs
+++ b/templates/lotrrp-miserable-box.hbs
@@ -6,8 +6,8 @@
     </div>
 </div>
 <div class="counter flexrow miserable">
-    <h4>{{ localize "AIME.Miserable" }}</h4>
+    <h4>{{ localize "LOTRRP.Miserable" }}</h4>
     <div class="counter-value">
-        <input type="checkbox" name="flags.aime.attributes.miserable" data-dtype="Boolean" {{checked flags.aime.attributes.miserable}}/>
+        <input type="checkbox" name="flags.lotrrp.attributes.miserable" data-dtype="Boolean" {{checked flags.lotrrp.attributes.miserable}}/>
     </div>
 </div>
