--- a/templates/lotrrp-tidy5e-miserable.hbs
+++ b/templates/lotrrp-tidy5e-miserable.hbs
@@ -1,8 +1,8 @@
 {{!-- Miserable --}}
 <div class="miserable has-note">
-	<input id="{{actor._id}}-miserable" type="checkbox" name="flags.aime.attributes.miserable" data-dtype="Boolean" {{checked flags.aime.attributes.miserable}}>
+	<input id="{{actor._id}}-miserable" type="checkbox" name="flags.lotrrp.attributes.miserable" data-dtype="Boolean" {{checked flags.lotrrp.attributes.miserable}}>
 	<label for="{{actor._id}}-miserable">
 		<i class="miserable-icon fas fa-frown-open"></i>
 	</label>
-	<div class="note">{{ localize 'AIME.Miserable' }}</div>
+	<div class="note">{{ localize 'LOTRRP.Miserable' }}</div>
 </div>
