--- a/templates/lotrrp-tidy5e-standard.hbs
+++ b/templates/lotrrp-tidy5e-standard.hbs
@@ -1,3 +1,3 @@
-<span class="aimeTidyInput">
-<input type="text" name="flags.aime.details.livingStandard" value="{{flags.aime.details.livingStandard}}" placeholder="{{ localize 'AIME.LivingStandard' }}"/>
+<span class="lotrrpTidyInput">
+<input type="text" name="flags.lotrrp.details.livingStandard" value="{{flags.lotrrp.details.livingStandard}}" placeholder="{{ localize 'LOTRRP.LivingStandard' }}"/>
 </span>
